--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
       "bundle-collapser": "^1.2.1",
       "grunt": "^0.4.5",
       "grunt-contrib-uglify": "^5.2.2",
-      "grunt-load-gruntfile": "^0.0.2",
-      "load-grunt-config": "^3.0.0",
+      "grunt-contrib-watch": "^0.6.1",
       "load-grunt-tasks": "^3.1.0"
    },
    "author": "Sylvain Breil",
