--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "grunt": "^0.4.5",
       "grunt-contrib-uglify": "^5.2.2",
       "grunt-contrib-watch": "^0.6.1",
+	  "load-grunt-config" : "^4.0.1",
       "load-grunt-tasks": "^3.1.0"
    },
    "author": "Sylvain Breil",
